Fixed a styling error that was creating a horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ li {
 .project-card-image-overlay {
   position: absolute;
   height: 100%;
-  width: 100%;
+  /* width: 100%; */
   opacity: 0;
   transition: .5s ease;
   background-color: #111;
